--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -13,7 +13,8 @@
     "@bosch-web-dds/spark-ui": "^1.1.4",
     "@bosch-web-dds/spark-ui-react": "^1.1.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
