--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@bosch-web-dds/spark-ui": "^1.1.4",
     "@bosch-web-dds/spark-ui-react": "^1.1.4",
+    "@hookform/resolvers": "^3.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-hook-form": "^7.51.0",
+    "react-router-dom": "^6.22.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
