--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -13,6 +13,8 @@
     "@bosch-web-dds/spark-ui": "^1.1.4",
     "@bosch-web-dds/spark-ui-react": "^1.1.4",
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
