--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
