--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -14,6 +14,7 @@
     "@bosch-web-dds/spark-ui-react": "^1.1.4",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "add": "^2.0.6",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -23,8 +24,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
+    "redux": "^5.0.1",
     "shadcn-ui": "^0.8.0",
     "table": "^6.8.1",
     "tailwind-merge": "^2.2.1",
