--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bosch-web-dds/spark-ui": "^1.1.4",
-    "@bosch-web-dds/spark-ui-react": "^1.1.4",
+    "@bosch-web-dds/spark-ui": "^1.2.6",
+    "@bosch-web-dds/spark-ui-react": "^1.2.6",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.1",
@@ -33,6 +33,7 @@
     "table": "^6.8.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
