--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.14.0",
+    "@azure/msal-react": "^2.0.16",
     "@bosch-web-dds/spark-ui": "^1.3.1",
     "@bosch-web-dds/spark-ui-react": "^1.3.1",
     "@hookform/resolvers": "^3.3.4",
