--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
