--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.2.19",
@@ -47,6 +48,7 @@
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
