feat: chartjs library

--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -19,11 +19,13 @@
     "@reduxjs/toolkit": "^2.2.1",
     "add": "^2.0.6",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "lucide-react": "^0.356.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
     "react-query": "^3.39.3",
