--- a/reviewer-frontend/package.json
+++ b/reviewer-frontend/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.40.1",
     "add": "^2.0.6",
     "axios": "^1.6.7",
     "chart.js": "^4.4.3",
